--- a/.github/workflows/openwrt-x86-ex-ci.yml
+++ b/.github/workflows/openwrt-x86-ex-ci.yml
@@ -14,7 +14,7 @@ on:
   #  - cron: 0 20 * * *
    push:
      branches: 
-       - master-build
+       - master-build-86
 
 jobs:
   build:
@@ -111,7 +111,7 @@ jobs:
           CONFIG_PACKAGE_luci-app-firewall=y
           CONFIG_PACKAGE_luci-app-flowoffload=y
           CONFIG_PACKAGE_luci-app-guest-wifi=y
-          CONFIG_PACKAGE_luci-app-mtwifi=y
+          #CONFIG_PACKAGE_luci-app-mtwifi=y
           #CONFIG_PACKAGE_luci-app-mwan3=y
           #CONFIG_PACKAGE_luci-app-mwan3helper=y
 
@@ -136,6 +136,7 @@ jobs:
 
           CONFIG_PACKAGE_luci-app-v2ray-server=y
           CONFIG_PACKAGE_luci-app-trojan-server=y
+          CONFIG_PACKAGE_luci-app-brook-server=y
 
           CONFIG_PACKAGE_luci-app-pppoe-relay=y
           CONFIG_PACKAGE_luci-app-pppoe-server=y
@@ -145,6 +146,7 @@ jobs:
           CONFIG_PACKAGE_luci-app-smartdns=y
           CONFIG_PACKAGE_luci-app-softethervpn=y
           CONFIG_PACKAGE_luci-app-sqm=y
+          CONFIG_PACKAGE_luci-app-nps=y
           CONFIG_PACKAGE_luci-app-syncdial=y
           CONFIG_PACKAGE_luci-app-upnp=y
           CONFIG_PACKAGE_luci-app-vlmcsd=y
