--- a/.github/workflows/openwrt-newifi3-ex-ci.yml
+++ b/.github/workflows/openwrt-newifi3-ex-ci.yml
@@ -915,10 +915,10 @@ jobs:
           CONFIG_PACKAGE_luci-app-adbyby-plus=y
           #CONFIG_PACKAGE_luci-app-adguardhome=y
           CONFIG_PACKAGE_luci-app-aria2=y
-          CONFIG_PACKAGE_luci-app-control-mia=y
-          CONFIG_PACKAGE_luci-app-control-timewol=y
-          CONFIG_PACKAGE_luci-app-control-webrestriction=y
-          CONFIG_PACKAGE_luci-app-control-weburl=y
+          ##CONFIG_PACKAGE_luci-app-control-mia=y
+          ##CONFIG_PACKAGE_luci-app-control-timewol=y
+          ##CONFIG_PACKAGE_luci-app-control-webrestriction=y
+          ##CONFIG_PACKAGE_luci-app-control-weburl=y
           CONFIG_PACKAGE_luci-app-ddns=y
           #CONFIG_PACKAGE_luci-app-fileassistant=y
           #CONFIG_PACKAGE_luci-app-filebrowser=y
@@ -944,7 +944,7 @@ jobs:
           CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Trojan=y
           CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Brook=y
           CONFIG_PACKAGE_luci-app-passwall_INCLUDE_kcptun=y
-          CONFIG_PACKAGE_luci-app-passwall_INCLUDE_haproxy=y
+          #CONFIG_PACKAGE_luci-app-passwall_INCLUDE_haproxy=y
           CONFIG_PACKAGE_luci-app-passwall_INCLUDE_ChinaDNS_NG=y
           CONFIG_PACKAGE_luci-app-passwall_INCLUDE_pdnsd=y
           CONFIG_PACKAGE_luci-app-passwall_INCLUDE_dns2socks=y
@@ -959,13 +959,13 @@ jobs:
           CONFIG_PACKAGE_luci-app-ramfree=y
           CONFIG_PACKAGE_luci-app-samba=y
           CONFIG_PACKAGE_luci-app-smartdns=y
-          CONFIG_PACKAGE_luci-app-softethervpn=y
+          ##CONFIG_PACKAGE_luci-app-softethervpn=y
           CONFIG_PACKAGE_luci-app-sqm=y
           CONFIG_PACKAGE_luci-app-nps=y
           CONFIG_PACKAGE_luci-app-syncdial=y
           CONFIG_PACKAGE_luci-app-upnp=y
           CONFIG_PACKAGE_luci-app-vlmcsd=y
-          CONFIG_PACKAGE_luci-app-vsftpd=y
+          ##CONFIG_PACKAGE_luci-app-vsftpd=y
           CONFIG_PACKAGE_luci-app-wireguard=y
           CONFIG_PACKAGE_luci-app-wifischedule=y
           CONFIG_PACKAGE_luci-app-zerotier=y
