--- a/.github/workflows/openwrt-newifi3-ex-ci.yml
+++ b/.github/workflows/openwrt-newifi3-ex-ci.yml
@@ -926,7 +926,7 @@ jobs:
           CONFIG_PACKAGE_luci-app-firewall=y
           CONFIG_PACKAGE_luci-app-flowoffload=y
           CONFIG_PACKAGE_luci-app-guest-wifi=y
-          #CONFIG_PACKAGE_luci-app-mtwifi=y
+          CONFIG_PACKAGE_luci-app-mtwifi=y
           #CONFIG_PACKAGE_luci-app-mwan3=y
           #CONFIG_PACKAGE_luci-app-mwan3helper=y
 
