--- a/.github/workflows/openwrt-newifi3-base-ci.yml
+++ b/.github/workflows/openwrt-newifi3-base-ci.yml
@@ -221,7 +221,7 @@ jobs:
           #CONFIG_PACKAGE_luci-app-mwan3=y
           #CONFIG_PACKAGE_luci-app-mwan3helper=y
           
-          CONFIG_PACKAGE_luci-app-nps=y
+          #CONFIG_PACKAGE_luci-app-nps=y
           CONFIG_PACKAGE_luci-app-syncdial=y
           CONFIG_PACKAGE_luci-app-unblockmusic=y
           
