--- a/.github/workflows/openwrt-newifi3-ex-ci.yml
+++ b/.github/workflows/openwrt-newifi3-ex-ci.yml
@@ -111,8 +111,8 @@ jobs:
 
           CONFIG_DEFAULT_mtd=y
           CONFIG_DEFAULT_netifd=y
-          CONFIG_DEFAULT_odhcp6c=y
-          CONFIG_DEFAULT_odhcpd-ipv6only=y
+          #CONFIG_DEFAULT_odhcp6c=y
+          #CONFIG_DEFAULT_odhcpd-ipv6only=y
           CONFIG_DEFAULT_opkg=y
           CONFIG_DEFAULT_ppp=y
           CONFIG_DEFAULT_ppp-mod-pppoe=y
@@ -535,7 +535,7 @@ jobs:
           CONFIG_PACKAGE_ca-certificates=y
           CONFIG_PACKAGE_dnsmasq-full=y
           CONFIG_PACKAGE_dnsmasq_full_dhcp=y
-          CONFIG_PACKAGE_dnsmasq_full_dhcpv6=y
+          #CONFIG_PACKAGE_dnsmasq_full_dhcpv6=y
           CONFIG_PACKAGE_dnsmasq_full_dnssec=y
           CONFIG_PACKAGE_dnsmasq_full_auth=y
           CONFIG_PACKAGE_dnsmasq_full_ipset=y
@@ -586,7 +586,7 @@ jobs:
 
 
 
-          CONFIG_PACKAGE_ipv6helper=y
+          #CONFIG_PACKAGE_ipv6helper=y
 
 
           CONFIG_PACKAGE_wireless-regdb=y
@@ -638,7 +638,7 @@ jobs:
           CONFIG_PACKAGE_kmod-ipt-ipset=y
           CONFIG_PACKAGE_kmod-ipt-nat=y
           CONFIG_PACKAGE_kmod-ipt-nat-extra=y
-          CONFIG_PACKAGE_kmod-ipt-nat6=y
+          #CONFIG_PACKAGE_kmod-ipt-nat6=y
           CONFIG_PACKAGE_kmod-ipt-offload=y
           CONFIG_PACKAGE_kmod-ipt-raw=y
           CONFIG_PACKAGE_kmod-ipt-tproxy=y
@@ -649,7 +649,7 @@ jobs:
           CONFIG_PACKAGE_kmod-nf-ipt=y
           CONFIG_PACKAGE_kmod-nf-ipt6=y
           CONFIG_PACKAGE_kmod-nf-nat=y
-          CONFIG_PACKAGE_kmod-nf-nat6=y
+          #CONFIG_PACKAGE_kmod-nf-nat6=y
           CONFIG_PACKAGE_kmod-nf-reject=y
           CONFIG_PACKAGE_kmod-nf-reject6=y
           CONFIG_PACKAGE_kmod-nfnetlink=y
@@ -969,7 +969,7 @@ jobs:
           CONFIG_PACKAGE_luci-theme-bootstrap=y
           CONFIG_PACKAGE_luci-theme-netgear=y
 
-          CONFIG_PACKAGE_luci-proto-ipv6=y
+          #CONFIG_PACKAGE_luci-proto-ipv6=y
           CONFIG_PACKAGE_luci-proto-ppp=y
           CONFIG_PACKAGE_luci-proto-wireguard=y
 
@@ -1101,9 +1101,9 @@ jobs:
           CONFIG_PACKAGE_libipset=y
           CONFIG_PACKAGE_odhcp6c=y
           CONFIG_PACKAGE_odhcp6c_ext_cer_id=0
-          CONFIG_PACKAGE_odhcpd-ipv6only=y
+          #CONFIG_PACKAGE_odhcpd-ipv6only=y
 
-          CONFIG_PACKAGE_odhcpd_ipv6only_ext_cer_id=0
+          #CONFIG_PACKAGE_odhcpd_ipv6only_ext_cer_id=0
           CONFIG_PACKAGE_ppp=y
           CONFIG_PACKAGE_ppp-mod-pppoe=y
           CONFIG_PACKAGE_samba36-server=y
