--- a/.github/workflows/openwrt-newifi3-ex-ci.yml
+++ b/.github/workflows/openwrt-newifi3-ex-ci.yml
@@ -5,13 +5,13 @@
 # Copyright (C) 2019 KFERMercer <KFER.Mercer@gmail.com>
 #  
 # <https://github.com/KFERMercer/OpenWrt-CI>
-#  
+# 
 
 name: OpenWrt-newifi3-ex-CI
 
 on: 
-  #schedule:
-  #  - cron: 0 20 * * *
+  schedule:
+    - cron: 0 22 * * *
    push:
      branches: 
        - master-build
@@ -34,7 +34,7 @@ jobs:
           sudo rm -rf /usr/share/dotnet /etc/mysql /etc/php /etc/apt/sources.list.d
           sudo -E apt-get -y purge azure-cli ghc* zulu* hhvm llvm* firefox google* dotnet* powershell openjdk* mysql* php*
           sudo -E apt-get update
-          sudo -E apt-get -y install build-essential asciidoc binutils bzip2 gawk gettext git libncurses5-dev libz-dev patch unzip zlib1g-dev lib32gcc1 libc6-dev-i386 subversion flex uglifyjs git-core gcc-multilib p7zip p7zip-full msmtp libssl-dev texinfo libglib2.0-dev xmlto qemu-utils upx libelf-dev autoconf automake libtool autopoint device-tree-compiler
+          sudo -E apt-get -y install build-essential asciidoc binutils bzip2 gawk gettext git libncurses5-dev libz-dev patch python3.5 unzip zlib1g-dev lib32gcc1 libc6-dev-i386 subversion flex uglifyjs git-core gcc-multilib p7zip p7zip-full msmtp libssl-dev texinfo libglib2.0-dev xmlto qemu-utils upx libelf-dev autoconf automake libtool autopoint device-tree-compiler g++-multilib antlr3 gperf
           sudo -E apt-get -y autoremove --purge
           sudo -E apt-get clean
           # 利用挂载在 /mnt/ 的 14G 额外空间:
@@ -111,8 +111,8 @@ jobs:
 
           CONFIG_DEFAULT_mtd=y
           CONFIG_DEFAULT_netifd=y
-          #CONFIG_DEFAULT_odhcp6c=y
-          #CONFIG_DEFAULT_odhcpd-ipv6only=y
+          CONFIG_DEFAULT_odhcp6c=y
+          CONFIG_DEFAULT_odhcpd-ipv6only=y
           CONFIG_DEFAULT_opkg=y
           CONFIG_DEFAULT_ppp=y
           CONFIG_DEFAULT_ppp-mod-pppoe=y
@@ -535,7 +535,7 @@ jobs:
           CONFIG_PACKAGE_ca-certificates=y
           CONFIG_PACKAGE_dnsmasq-full=y
           CONFIG_PACKAGE_dnsmasq_full_dhcp=y
-          #CONFIG_PACKAGE_dnsmasq_full_dhcpv6=y
+          CONFIG_PACKAGE_dnsmasq_full_dhcpv6=y
           CONFIG_PACKAGE_dnsmasq_full_dnssec=y
           CONFIG_PACKAGE_dnsmasq_full_auth=y
           CONFIG_PACKAGE_dnsmasq_full_ipset=y
@@ -586,7 +586,7 @@ jobs:
 
 
 
-          #CONFIG_PACKAGE_ipv6helper=y
+          CONFIG_PACKAGE_ipv6helper=y
 
 
           CONFIG_PACKAGE_wireless-regdb=y
@@ -638,7 +638,7 @@ jobs:
           CONFIG_PACKAGE_kmod-ipt-ipset=y
           CONFIG_PACKAGE_kmod-ipt-nat=y
           CONFIG_PACKAGE_kmod-ipt-nat-extra=y
-          #CONFIG_PACKAGE_kmod-ipt-nat6=y
+          CONFIG_PACKAGE_kmod-ipt-nat6=y
           CONFIG_PACKAGE_kmod-ipt-offload=y
           CONFIG_PACKAGE_kmod-ipt-raw=y
           CONFIG_PACKAGE_kmod-ipt-tproxy=y
@@ -649,7 +649,7 @@ jobs:
           CONFIG_PACKAGE_kmod-nf-ipt=y
           CONFIG_PACKAGE_kmod-nf-ipt6=y
           CONFIG_PACKAGE_kmod-nf-nat=y
-          #CONFIG_PACKAGE_kmod-nf-nat6=y
+          CONFIG_PACKAGE_kmod-nf-nat6=y
           CONFIG_PACKAGE_kmod-nf-reject=y
           CONFIG_PACKAGE_kmod-nf-reject6=y
           CONFIG_PACKAGE_kmod-nfnetlink=y
@@ -910,12 +910,12 @@ jobs:
 
           CONFIG_PACKAGE_luci-app-acme=y
           CONFIG_PACKAGE_luci-app-adbyby-plus=y
-          #CONFIG_PACKAGE_luci-app-adguardhome=y
+          CONFIG_PACKAGE_luci-app-adguardhome=y
           CONFIG_PACKAGE_luci-app-aria2=y
-          ##CONFIG_PACKAGE_luci-app-control-mia=y
-          ##CONFIG_PACKAGE_luci-app-control-timewol=y
-          ##CONFIG_PACKAGE_luci-app-control-webrestriction=y
-          ##CONFIG_PACKAGE_luci-app-control-weburl=y
+          CONFIG_PACKAGE_luci-app-control-mia=y
+          CONFIG_PACKAGE_luci-app-control-timewol=y
+          CONFIG_PACKAGE_luci-app-control-webrestriction=y
+          CONFIG_PACKAGE_luci-app-control-weburl=y
           CONFIG_PACKAGE_luci-app-ddns=y
           #CONFIG_PACKAGE_luci-app-fileassistant=y
           #CONFIG_PACKAGE_luci-app-filebrowser=y
@@ -938,7 +938,7 @@ jobs:
           CONFIG_PACKAGE_luci-app-passwall_INCLUDE_ShadowsocksR_socks=y
           CONFIG_PACKAGE_luci-app-passwall_INCLUDE_V2ray=y
           CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Trojan=y
-          #CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Brook=y
+          CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Brook=y
           CONFIG_PACKAGE_luci-app-passwall_INCLUDE_kcptun=y
           #CONFIG_PACKAGE_luci-app-passwall_INCLUDE_haproxy=y
           CONFIG_PACKAGE_luci-app-passwall_INCLUDE_ChinaDNS_NG=y
@@ -947,7 +947,9 @@ jobs:
 
           CONFIG_PACKAGE_luci-app-v2ray-server=y
           CONFIG_PACKAGE_luci-app-trojan-server=y
-          #CONFIG_PACKAGE_luci-app-brook-server=y
+           CONFIG_PACKAGE_luci-app-brook-server=y
+          
+          CONFIG_PACKAGE_luci-ssl-openssl=y
 
           CONFIG_PACKAGE_luci-app-pppoe-relay=y
           CONFIG_PACKAGE_luci-app-pppoe-server=y
@@ -955,13 +957,13 @@ jobs:
           CONFIG_PACKAGE_luci-app-ramfree=y
           CONFIG_PACKAGE_luci-app-samba=y
           CONFIG_PACKAGE_luci-app-smartdns=y
-          ##CONFIG_PACKAGE_luci-app-softethervpn=y
-          CONFIG_PACKAGE_luci-app-sqm=m
+          CONFIG_PACKAGE_luci-app-softethervpn=y
+          CONFIG_PACKAGE_luci-app-sqm=y
           #CONFIG_PACKAGE_luci-app-nps=y
           CONFIG_PACKAGE_luci-app-syncdial=y
           CONFIG_PACKAGE_luci-app-upnp=y
           CONFIG_PACKAGE_luci-app-vlmcsd=y
-          ##CONFIG_PACKAGE_luci-app-vsftpd=y
+          CONFIG_PACKAGE_luci-app-vsftpd=y
           CONFIG_PACKAGE_luci-app-wireguard=y
           CONFIG_PACKAGE_luci-app-wifischedule=y
           CONFIG_PACKAGE_luci-app-zerotier=y
@@ -969,7 +971,7 @@ jobs:
           CONFIG_PACKAGE_luci-theme-bootstrap=y
           CONFIG_PACKAGE_luci-theme-netgear=y
 
-          #CONFIG_PACKAGE_luci-proto-ipv6=y
+          CONFIG_PACKAGE_luci-proto-ipv6=y
           CONFIG_PACKAGE_luci-proto-ppp=y
           CONFIG_PACKAGE_luci-proto-wireguard=y
 
@@ -1101,9 +1103,9 @@ jobs:
           CONFIG_PACKAGE_libipset=y
           CONFIG_PACKAGE_odhcp6c=y
           CONFIG_PACKAGE_odhcp6c_ext_cer_id=0
-          #CONFIG_PACKAGE_odhcpd-ipv6only=y
+          CONFIG_PACKAGE_odhcpd-ipv6only=y
 
-          #CONFIG_PACKAGE_odhcpd_ipv6only_ext_cer_id=0
+          CONFIG_PACKAGE_odhcpd_ipv6only_ext_cer_id=0
           CONFIG_PACKAGE_ppp=y
           CONFIG_PACKAGE_ppp-mod-pppoe=y
           CONFIG_PACKAGE_samba36-server=y
@@ -1190,10 +1192,10 @@ jobs:
         run: |
           rm -rf ./artifact/
           mkdir -p ./artifact/
-          find ./bin/targets/ -name "*combined*img*" | xargs -i mv -f {} ./artifact/
-          find ./bin/targets/ -name "*sysupgrade*bin*" | xargs -i mv -f {} ./artifact/
-          #mv ./bin/targets/ ./artifact/
-          #mv ./bin/packages/ ./artifact/
+          #find ./bin/targets/ -name "*combined*img*" | xargs -i mv -f {} ./artifact/
+          #find ./bin/targets/ -name "*sysupgrade*bin*" | xargs -i mv -f {} ./artifact/
+          mv ./bin/targets/ ./artifact/
+          mv ./bin/packages/ ./artifact/
       - name: Upload artifact
         uses: actions/upload-artifact@master
         with:
