--- a/.github/workflows/openwrt-newifi3-base-ci.yml
+++ b/.github/workflows/openwrt-newifi3-base-ci.yml
@@ -5,13 +5,13 @@
 # Copyright (C) 2019 KFERMercer <KFER.Mercer@gmail.com>
 # 
 # <https://github.com/KFERMercer/OpenWrt-CI>
-#   
+#     
 
 name: OpenWrt-newifi3-base-CI
 
 on: 
-  #schedule:
-  #  - cron: 0 20 * * *
+   schedule:
+    - cron: 0 22 * * *
    push:
      branches: 
        - master-build
@@ -34,7 +34,7 @@ jobs:
           sudo rm -rf /usr/share/dotnet /etc/mysql /etc/php /etc/apt/sources.list.d
           sudo -E apt-get -y purge azure-cli ghc* zulu* hhvm llvm* firefox google* dotnet* powershell openjdk* mysql* php*
           sudo -E apt-get update
-          sudo -E apt-get -y install build-essential asciidoc binutils bzip2 gawk gettext git libncurses5-dev libz-dev patch unzip zlib1g-dev lib32gcc1 libc6-dev-i386 subversion flex uglifyjs git-core gcc-multilib p7zip p7zip-full msmtp libssl-dev texinfo libglib2.0-dev xmlto qemu-utils upx libelf-dev autoconf automake libtool autopoint device-tree-compiler
+          sudo -E apt-get -y install build-essential asciidoc binutils bzip2 gawk gettext git libncurses5-dev libz-dev patch python3.5 unzip zlib1g-dev lib32gcc1 libc6-dev-i386 subversion flex uglifyjs git-core gcc-multilib p7zip p7zip-full msmtp libssl-dev texinfo libglib2.0-dev xmlto qemu-utils upx libelf-dev autoconf automake libtool autopoint device-tree-compiler g++-multilib antlr3 gperf
           sudo -E apt-get -y autoremove --purge
           sudo -E apt-get clean
           # 利用挂载在 /mnt/ 的 14G 额外空间:
@@ -98,8 +98,8 @@ jobs:
           # EOF
           # IPv6支持:
           cat >> .config <<EOF
-          # CONFIG_PACKAGE_dnsmasq_full_dhcpv6=y
-          # CONFIG_PACKAGE_ipv6helper=y
+          CONFIG_PACKAGE_dnsmasq_full_dhcpv6=y
+          CONFIG_PACKAGE_ipv6helper=y
           EOF
           # 多文件系统支持:
           cat >> .config <<EOF
@@ -175,6 +175,8 @@ jobs:
           #CONFIG_PACKAGE_luci-i18n-pppoe-relay-zh-cn=y
           #CONFIG_PACKAGE_luci-i18n-pppoe-server-zh-cn=y
           
+          CONFIG_PACKAGE_luci-ssl-openssl=y
+          
           CONFIG_PACKAGE_luci-app-pptp-vpnserver-manyusers=y
           #CONFIG_PACKAGE_luci-i18n-pptp-vpnserver-manyusers-zh-cn=y
           
@@ -192,7 +194,7 @@ jobs:
           CONFIG_PACKAGE_luci-app-splash=y
           CONFIG_PACKAGE_luci-i18n-splash-zh-cn=y
           
-          CONFIG_PACKAGE_luci-app-sqm=m
+          CONFIG_PACKAGE_luci-app-sqm=y
           
           CONFIG_PACKAGE_luci-app-ssrserver-python=y
           #CONFIG_PACKAGE_luci-i18n-ssr-python-pro-server-zh-cn=y
@@ -218,6 +220,7 @@ jobs:
           CONFIG_PACKAGE_luci-app-koolproxyR=y
           #CONFIG_PACKAGE_luci-app-mwan3=y
           #CONFIG_PACKAGE_luci-app-mwan3helper=y
+          
           #CONFIG_PACKAGE_luci-app-nps=y
           CONFIG_PACKAGE_luci-app-syncdial=y
           CONFIG_PACKAGE_luci-app-unblockmusic=y
