--- a/.github/workflows/openwrt-newifi3-ex-ci.yml
+++ b/.github/workflows/openwrt-newifi3-ex-ci.yml
@@ -50,6 +50,11 @@ jobs:
         run: |
           ./scripts/feeds update -a
           ./scripts/feeds install -a
+      - name: add librarys
+        run: |
+           cd openwrt/package/lean/
+           git clone https://github.com/Leslie-Wong/passwall.git
+           cd ../../
       - name: Costom configure file
         run: |
           rm -f ./.config*
