--- a/.github/workflows/openwrt-newifi3-ex-ci.yml
+++ b/.github/workflows/openwrt-newifi3-ex-ci.yml
@@ -46,10 +46,20 @@ jobs:
           ln -s /mnt/openwrt/feeds ./feeds
           ln -s /mnt/openwrt/staging_dir ./staging_dir
           df -h
+          
       - name: Update feeds
         run: |
           ./scripts/feeds update -a
           ./scripts/feeds install -a
+          
+      - name: add small
+        run: |
+           cd package && git clone https://github.com/Leslie-Wong/small.git
+           
+      - name: add passwall
+        run: |
+           cd package/lean && git clone https://github.com/Leslie-Wong/passwall.git
+           
       - name: Costom configure file
         run: |
           rm -f ./.config*
