--- a/.github/workflows/openwrt-newifi3-ex-ci.yml
+++ b/.github/workflows/openwrt-newifi3-ex-ci.yml
@@ -1,11 +1,11 @@
 #
 # This is free software, lisence use MIT.
-#  
+# 
 # Copyright (C) 2019 P3TERX <https://p3terx.com> 
 # Copyright (C) 2019 KFERMercer <KFER.Mercer@gmail.com>
-# 
+#  
 # <https://github.com/KFERMercer/OpenWrt-CI>
-# 
+#  
 
 name: OpenWrt-newifi3-ex-CI
 
@@ -34,7 +34,7 @@ jobs:
           sudo rm -rf /usr/share/dotnet /etc/mysql /etc/php /etc/apt/sources.list.d
           sudo -E apt-get -y purge azure-cli ghc* zulu* hhvm llvm* firefox google* dotnet* powershell openjdk* mysql* php*
           sudo -E apt-get update
-          sudo -E apt-get -y install build-essential asciidoc binutils bzip2 gawk gettext git libncurses5-dev libz-dev patch python3.5 unzip zlib1g-dev lib32gcc1 libc6-dev-i386 subversion flex uglifyjs git-core gcc-multilib p7zip p7zip-full msmtp libssl-dev texinfo libglib2.0-dev xmlto qemu-utils upx libelf-dev autoconf automake libtool autopoint device-tree-compiler g++-multilib antlr3 gperf
+          sudo -E apt-get -y install build-essential asciidoc binutils bzip2 gawk gettext git libncurses5-dev libz-dev patch unzip zlib1g-dev lib32gcc1 libc6-dev-i386 subversion flex uglifyjs git-core gcc-multilib p7zip p7zip-full msmtp libssl-dev texinfo libglib2.0-dev xmlto qemu-utils upx libelf-dev autoconf automake libtool autopoint device-tree-compiler
           sudo -E apt-get -y autoremove --purge
           sudo -E apt-get clean
           # 利用挂载在 /mnt/ 的 14G 额外空间:
@@ -46,17 +46,14 @@ jobs:
           ln -s /mnt/openwrt/feeds ./feeds
           ln -s /mnt/openwrt/staging_dir ./staging_dir
           df -h
-          
       - name: Update feeds
         run: |
           ./scripts/feeds update -a
           ./scripts/feeds install -a
-          
       - name: add small
         run: |
            cd package && git clone https://github.com/Leslie-Wong/small.git
-           
-      - name: add passwall
+      - name: add librarys
         run: |
            cd package/lean && git clone https://github.com/Leslie-Wong/passwall.git
            
@@ -1189,7 +1186,7 @@ jobs:
           find dl -size -1024c -exec rm -f {} \;
       - name: Compile firmware
         run: |
-          make -j1 V=sc
+          make -j$(nproc) || make -j1 V=s
           echo "======================="
           echo "Space usage:"
           echo "======================="
