--- a/.github/workflows/openwrt-newifi3-ex-ci.yml
+++ b/.github/workflows/openwrt-newifi3-ex-ci.yml
@@ -1115,7 +1115,7 @@ jobs:
           CONFIG_PACKAGE_odhcpd_ipv6only_ext_cer_id=0
           CONFIG_PACKAGE_ppp=y
           CONFIG_PACKAGE_ppp-mod-pppoe=y
-          CONFIG_PACKAGE_samba36-server=y
+          #CONFIG_PACKAGE_samba36-server=y
           CONFIG_PACKAGE_SAMBA_MAX_DEBUG_LEVEL=-1
           CONFIG_PACKAGE_shadowsocksr-libev-alt=y
           CONFIG_PACKAGE_shadowsocksr-libev-server=y
