--- a/.github/workflows/openwrt-newifi3-ex-ci.yml
+++ b/.github/workflows/openwrt-newifi3-ex-ci.yml
@@ -50,9 +50,9 @@ jobs:
         run: |
           ./scripts/feeds update -a
           ./scripts/feeds install -a
-      - name: add librarys
-        run: |
-           cd package/lean && git clone https://github.com/Leslie-Wong/passwall.git
+      #- name: add librarys
+      #  run: |
+      #     cd package/lean && git clone https://github.com/Leslie-Wong/passwall.git
            
       - name: Costom configure file
         run: |
